Adição do endpoint meus locais
para listar os locais do usuario ativo. E um pequeno ajuste do swager
