# src/routes/locais.route.js
@@ -7,6 +7,7 @@ const { validarAdicionarLocal } = require('../middleware/validator')
 const localRoutes = new Router()
 
 localRoutes.get('/', LocalController.listar)
+localRoutes.get('/meus-locais', auth, LocalController.listarMeusLocais)
 localRoutes.get('/:id', LocalController.listarUm)
 localRoutes.post('/', auth, validarAdicionarLocal, LocalController.cadastrar)
 localRoutes.put('/:id', auth, validarAdicionarLocal, LocalController.atualizar)
