# src/routes/swagger.json
@@ -249,6 +249,33 @@
             "description": "Internal Server Error"
           }
         }
+      },
+      "get": {
+        "tags": [
+          "Usuario"
+        ],
+        "summary": "Listar usuário pelo ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Informe o ID do Usuário. Ex: 1"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/locais/": {
@@ -301,10 +328,6 @@
                 "cep": {
                   "type": "string",
                   "example": "12345678"
-                },
-                "coordenadas_geograficas": {
-                  "type": "string",
-                  "example": ""
                 }
               },
               "required": [
@@ -332,12 +355,39 @@
         }
       }
     },
+    "/locais/meus-locais": {
+      "get": {
+        "tags": [
+          "Local"
+        ],
+        "summary": "Listar os locais do usuario activo",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/locais/{id}": {
       "get": {
         "tags": [
           "Local"
         ],
-        "summary": "Listar local pelo ID do usuario activo",
+        "summary": "Listar local pelo ID",
         "description": "",
         "parameters": [
           {
@@ -400,10 +450,6 @@
                 "cep": {
                   "type": "string",
                   "example": "12345678"
-                },
-                "coordenadas_geograficas": {
-                  "type": "string",
-                  "example": ""
                 }
               },
               "required": [
@@ -505,6 +551,23 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/dashboard/": {
+      "get": {
+        "tags": [
+          "Dashboard"
+        ],
+        "summary": "Informação geral do sistema",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
